--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,12 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
+*.pyc
 # C extensions
 *.so
 
 # Distribution / packaging
+.vscode/
 .Python
 build/
 develop-eggs/
